--- a/frontend/components/jobs.module.css
+++ b/frontend/components/jobs.module.css
@@ -1,4 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap");
+
+@property --load-value {
+    syntax: "<percentage>";
+    inherits: false;
+    initial-value: 0%;
+}
+
+
+.load > div:before {
+    content: "";
+    position: absolute;
+    font-weight: 600;
+    color: #fefefe;
+    width: 100px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+.load > div:after {
+    content: attr(data-percent);
+    width: 100px;
+    margin: 10px;
+    padding: 45px 35px 35px 35px;
+    border-radius: 50%;
+    background: #2c3e50;
+    text-align: center;
+}
+
+.load > div {
+    --load-value: var(--load);
+    transition: --load-value 400ms;
+    background: conic-gradient(#007fff var(--load-value), #c0c0c0 var(--load-value));
+    height: 100px;
+}
+
+.load > div:before {
+    color: #fefefe;
+    content: "LOADING";
+}
 
 .job {
     width: 70%;
@@ -12,7 +51,8 @@
     animation: pullup 1s forwards ease-in-out;
 }
 
-.jobs, .job {
+.jobs,
+.job {
     transition-duration: 300ms;
 }
 
@@ -37,7 +77,7 @@
 .header h1 {
     font-size: 1.5rem;
     font-weight: 600;
-    font-family: 'SUSE', system-ui;
+    font-family: "SUSE", system-ui;
     color: #2c3e50;
     text-transform: uppercase;
     width: max-content;
